samples/_failures_safe/1761289461_43c0af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef2f1750.c: In function ‘main’:
./samples/SAFE/__tmp_ef2f1750.c:145:9: error: expected declaration or statement at end of input
  145 |         printf("Failed to initialize compression context\n");
      |         ^~~~~~
./samples/SAFE/__tmp_ef2f1750.c:145:9: error: expected declaration or statement at end of input
